# faceutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.py
faceutils/: __init__.py  distance.py  face_detector.py  io.py  models.py  visualizer.py
launch/: webcam-window.launch  webcam.launch
msg/: Box.msg
ros/: package.xml
ros-face-recognition/msg/: Box.msg
ros-face-recognition/scripts/data/: gender_model.pickle
ros-face-recognition/srv/: Detect.srv
ros/launch/: webcam-window.launch
ros/scripts/: display.py  knn.py
ros/scripts/data/: models.sh
ros_face_recognition/srv/: Name.srv
ros_module/launch/: webcam.launch
scripts/: config.py  display.py  face_api.py  face_recognition_node.py  knn.py
scripts/faces/: .gitkeep
srv/: Face.srv
tests/: face_detector_test.py  face_features_test.py  face_landmark_test.py  face_recognition_test.py  face_visualize_test.py
